--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^10.0",
         "laravel/passport": "^12.1",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "livewire/livewire": "^3.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
