--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.2.12",
+        "barryvdh/laravel-dompdf": "^2.1",
         "doctrine/dbal": "^3.8",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/passport": "^12.1",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^3.4"
+        "livewire/livewire": "^3.4",
+        "maatwebsite/excel": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
