--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^3.4",
-        "maatwebsite/excel": "^3.0"
+        "maatwebsite/excel": "^3.0",
+        "staudenmeir/belongs-to-through": "^2.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
